prevents scrolling on small-height screens

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,7 +1,13 @@
-body { margin: 0; }
+body {
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
+}
 
 .background-img {
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
+  top: 0;
 }
 
 .gradient {
@@ -41,9 +47,6 @@ body { margin: 0; }
 }
 
 @media only screen and (max-width: 500px) {
-  .background-img {
-    height: 100%;
-  }
   .gradient {
     background: linear-gradient(rgba(50, 50, 50, 0) 40%, rgba(0, 0, 0, 1));
   }
